<resources>
    <string name="app_name">MotorCalc</string>
    <string name="hint_amount">Vehicle Price</string>
    <string name="hint_interest">Interest(%)</string>
    <string name="hint_downPayment">Down Payment(%)</string>
    <string name="hint_discount">Discount(QAR)</string>
    <string name="hint_processingFee">Processing Fee(%)</string>
    <string name="hint_emi">EMI (Months)</string>
    <string name="text_addInsurance">Add Motor Insurance</string>
    <string name="text_insurance">Insurance(%)</string>
    <string name="text_clear">Clear</string>
    <string name="text_submit">Calculate</string>

    <!-- for results table -->
    <string name="label_vehicle_price">Vehicle Price:</string>
    <string name="label_discount">Discount:</string>
    <string name="label_net_vehicle">Net Vehicle After OFFER:</string>
    <string name="label_motor_insurance">Motor Insurance:</string>
    <string name="label_total_price">Total Price:</string>
    <string name="label_down_payment">Down Payment:</string>
    <string name="label_finance_amount">Finance Amount:</string>
    <string name="label_processing_fee">Processing Fee:</string>
    <string name="label_total_down_payment">Total Down Payment:</string>
    <string name="label_interest">Interest:</string>
    <string name="label_emi">EMI:</string>
    <string name="label_amount_per_month">Amount (per month):</string>

    <!-- Format strings -->
    <string name="format_percentage_value">%1$s%%: %2$s</string>
    <string name="format_percentage_value_spaced">%1$s%% : %2$s</string>
    <string name="format_years_months">%1$s years (%2$s months)</string>

    <!-- Error Message-->
    <string name="err_text_no_price">No vehicle price entered!</string>

</resources>